Add test suite for pyftrace
- Implement `runtests.py` for all pyftrace functions
- Used regex matching for dynamic values in report (e.g., execution times)

example usage:

 $ python3.12 tests/runtests.py
 test_help_option_long_help (__main__.PyftraceTests.test_help_option_long_help)
 Test '--help' ... ok
 test_help_option_short_h (__main__.PyftraceTests.test_help_option_short_h)
 Test '-h' ... ok
 test_tracing_script_default (__main__.PyftraceTests.test_tracing_script_default)
 Test basic tracing ... ok
 test_tracing_script_path (__main__.PyftraceTests.test_tracing_script_path)
 Test '--path' ... ok
 test_tracing_script_verbose (__main__.PyftraceTests.test_tracing_script_verbose)
 Test '--verbose' ... ok
 test_version_flag_long_version (__main__.PyftraceTests.test_version_flag_long_version)
 Test  '--version' ... ok
 test_version_flag_short_v (__main__.PyftraceTests.test_version_flag_short_v)
 Test '-v' ... ok
 ----------------------------------------------------------------------
 Ran 7 tests in 0.233s
 OK

--- a/TODO
+++ b/TODO
@@ -1,8 +1,6 @@
-- add some unittests
 - TUI
 - argument tracing
-- trace record, output
 - function filtering: --function/-F <string>
 - depth limit: --depth/-D <int> 
-- output format: -o/--output -O <filename>
+- output format: -o/--output -O <filename> / sqlite dump
 - multiprocessing & multithreading: pid, tid tracing: 
