--- a/TODO
+++ b/TODO
@@ -1,13 +1,14 @@
 - add -vv option for large codebase (e.g. Django, Pytorch, etc)
   - -v option: Additionally enable built-in functions tracing
-  - -vv option: Additionally enable stdlib tracing 
+  - -vv option: Additionally enable site_packages_modules tracing 
+  - -vvv option: Additionally enable stdlib tracing 
     - stdlib path: sysconfig.get_paths()["stdlib"]
+- depth limit: --depth/-D <int> 
 - trace format using ├, │, ─ 
 - tui: fold/unfold
 - tui: '/' (search function)
 - function filtering: --function/-f <string>
 - function-exclude filtering: --exclude-function/-e <string>
-- depth limit: --depth/-D <int> 
 - output format: -o/--output -O <filename> / sqlite dump
 - multiprocessing(pid) & multithreading(tid) tracing
 - argument tracing
