--- a/TODO
+++ b/TODO
@@ -5,3 +5,4 @@
 - output format: -o/--output -O <filename> / sqlite dump
 - multiprocessing(pid) & multithreading(tid) tracing
 - argument tracing
+- add some useful real world examples
